syntax = "proto3";

package sdc.biceps;

option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "AbstractContextStateType";

import "sdc/biceps/abstractmultistate.proto";
import "sdc/biceps/instanceidentifieroneof.proto";
import "sdc/biceps/contextassociation.proto";

message AbstractContextState {
  AbstractMultiState abstract_multi_state = 1;
  InstanceIdentifierOneOf validator = 2;
  InstanceIdentifierOneOf identification = 3;
  ContextAssociation a_context_association = 4;
  uint64 a_binding_mdib_version = 5;
  uint64 a_unbinding_mdib_version = 6;
  uint64 a_binding_start_time = 7;
  uint64 a_binding_end_time = 8;
}
