syntax = "proto3";

package sdc.biceps;

option java_multiple_files = true;
option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "LocationContextStateProto";

import "sdc/biceps/abstractcontextstate.proto";
import "sdc/biceps/locationdetail.proto";

message LocationContextStateMsg {
  AbstractContextStateMsg abstract_context_state = 1;
  LocationDetailMsg location_detail = 2;
}
